# fintech-data-platform

./: .gitignore  README.md  main.py  pandas_challenge.py  pyproject.toml  requirements.txt  results.txt  transaction_summary.csv  transactions.csv
.github/workflows/: ci.yml
data/processed/: cleaned_ledger.csv
data/raw/: raw_ledger.csv
data/reports/: analytics_report.json
docker/: dockerfile
docs/: architecture.md
fintech-data-platform/src/: extractor.py  generator.py  loader.py
notebooks/: spark_analytics.py
scripts/: deploy.ps1
sql/: queries.sql
src/: analyzer.py  config.py  extractor.py  generator.py  loader.py  logger.py  main.py  transformer.py  validator.py
tests/: test_database.py  test_pipeline.py
week01-python/: banking_analyzer.py
