[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-data-platform"
version = "1.0.0"
description = "Production-grade automated fintech ingestion and analytical ETL pipeline engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
fintech-platform = "src.main:run_platform_pipeline"


